@@ -202,6 +202,9 @@
     <Image Include="res\AOdither.bmp">
       <Filter>res</Filter>
     </Image>
+    <Image Include="res\kickerWilliams.bmp" />
+    <Image Include="res\kickerGottlieb.bmp" />
+    <Image Include="res\kickerT1.bmp" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="vpinball.idl" />
